--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,42 +6,29 @@ services:
     ports:
       - 3000:3000
     platform: linux/x86_64
-    working_dir: /app/frontend
+    working_dir: /app-frontend
     depends_on:
       - backend
     container_name: delivery_front
   backend:
     build: ./back-end
-    working_dir: /app/backend
-    volumes:
-      - ./back-end:/app/backend
     container_name: delivery_api
     tty: true
     stdin_open: true
-    command: npm run db:reset
+    command: bash
     restart: always
+    volumes: 
+      - ./back-end:/app-backend
     depends_on:
       - db
     ports:
       - 3001:3001
-    environment:
-      - NODE_ENV=development
-      - API_PORT=3001
-      - MYSQL_HOST=delivery_db
-      - MYSQL_PORT=3306
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=password
-      - MYSQL_DB_NAME=delivery-app
-      - EVAL_ALWAYS_RESTORE_DEV_DB=true
   db:
     container_name: delivery_db
-    image: mysql
-    restart: always
+    image: mysql:8.0.21
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     ports:
       - 3306:3306
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-
-networks:
-  default:
-    name: app-delivery_net
+    command: mysqld --default-authentication-plugin=mysql_native_password
+    restart: always
