--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:16-alpine
+FROM node:16
 
-WORKDIR /app/frontend/
+WORKDIR /app-frontend
 
-COPY package.json /app/frontend/
+COPY package.json /app-frontend
 
 RUN npm install
 
-COPY . /app/frontend/
+COPY . /app-frontend
 
 EXPOSE 3000
 
