--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -2,10 +2,6 @@ FROM node:16
 
 WORKDIR /app-backend
 
-COPY package.json /app-backend
+COPY . .
 
 RUN npm install
-
-COPY . /app-backend
-
-EXPOSE 3001
