--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     ports:
       - 3000:3000
     platform: linux/x86_64
-    working_dir: /app-frontend
     depends_on:
       - backend
     container_name: delivery_front
@@ -15,7 +14,7 @@ services:
     container_name: delivery_api
     tty: true
     stdin_open: true
-    command: bash
+    command: bash -c "chown -R root /app-backend && npm run db:reset && npm run dev"
     restart: always
     volumes: 
       - ./back-end:/app-backend
