--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -2,12 +2,8 @@ FROM node:16
 
 WORKDIR /app-frontend
 
-COPY package.json /app-frontend
+COPY . .
 
 RUN npm install
-
-COPY . /app-frontend
-
-EXPOSE 3000
 
 CMD [ "npm", "start" ]
